--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/framework-bundle": "2.*"
     },
     "autoload": {
-        "psr-0": { "ManyMules\\FontAwesomeBundle": "" }
+        "psr-0": { "ManyMules\\ManyMulesFontAwesomeBundle": "" }
     },
-    "target-dir": "ManyMules/FontAwesomeBundle"
+    "target-dir": "ManyMules/ManyMulesFontAwesomeBundle"
 }
